# Matrices

./: .gitignore  CMakeLists.txt
sources/: Errors.hpp  Matrix.h  Matrix.hpp
tests/: test_Matrix.cpp
